tdf#161979: Render GDI metafile using drawinglayer in XOutBitmap

After the changes related to EMF+ reworking,  much of the code was removed
from VCL, e.g. commit 217ad59a412ebab07a106b14c8976d20bddb9356 (tdf#111486
Removed not used EMF+ code, 2018-12-07).  EMF+ code is now in drawinglayer
(see EmfPlusHelperData::processEmfPlusData).  Unfortunately, we can't make
ImpGraphic::draw in VCL to use drawinglayer for rendering,  because VCL is
lower in dependency tree (it only can use drawinglayercore).

Change-Id: I08f8c8ec66baf3dde1f35481144d5e1819bb5fc1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170311
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 37217909f2e7c042eab9a8b5eb1ab0a88cdda513)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170345
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>